<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.PiJukebox</groupId>
    <artifactId>PiJukeboxPlayer</artifactId>
    <version>1.1</version>
    <!-- We're building a web application; namely a REST API. Web apps need to be WAR instead of JAR -->
    <!-- Although for testing or including in WAR, JAR is fine -->
    <packaging>jar</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- The normal way to set the source and target versions to compile the JAR/WAR files -->
        <!-- Build using Java 8 -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <!-- And compile to Java 8 -->
        <maven.compiler.target>1.8</maven.compiler.target>
        <spring.version>5.1.2.RELEASE</spring.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <cargo-core-container-tomcat.version>1.7.0</cargo-core-container-tomcat.version>
        <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
        <cargo-maven2-plugin.version>9.0.13</cargo-maven2-plugin.version>
    </properties>
    
    <dependencies>
        <!-- MP3agic for reading metadata -->
        <dependency>
            <groupId>com.mpatric</groupId>
            <artifactId>mp3agic</artifactId>
            <version>0.9.1</version>
            <type>jar</type>
        </dependency>
        <!-- am I missing anything? -->
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <!--<plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven-war-plugin.version}</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
            </plugin>-->
            <plugin>
                <!-- Alternate way of setting the target and source versions to compile with -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <name>PiJukebox</name>
</project>
